workspace/log/build_2023-10-30_17-49-10/template_drone_control/stdout_stderr.log
[35m[1mScanning dependencies of target template_drone_control_node[0m
[ 50%] [32mBuilding CXX object CMakeFiles/template_drone_control_node.dir/src/template_drone_control_node.cpp.o[0m
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp: In constructor ‘TemplateDroneControl::TemplateDroneControl()’:
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:47:22: error: ‘STDIN_FILsend_position_commandENO’ was not declared in this scope
   47 |                 read(STDIN_FILsend_position_commandENO, &c, 1);
      |                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:50:39: error: no matching function for call to ‘TemplateDroneControl::send_land_request()’
   50 |                     send_land_request();
      |                                       ^
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:296:10: note: candidate: ‘void TemplateDroneControl::send_land_request(float)’
  296 |     void send_land_request(float alt)
      |          ^~~~~~~~~~~~~~~~~
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:296:10: note:   candidate expects 1 argument, 0 provided
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp: In member function ‘void TemplateDroneControl::move_to_position()’:
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:69:34: error: ‘points’ was not declared in this scope; did you mean ‘point’?
   69 |         for (const auto& point : points) {
      |                                  ^~~~~~
      |                                  point
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp: In member function ‘void TemplateDroneControl::rotate_360_blaze_it()’:
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:92:9: error: ‘tf2’ has not been declared
   92 |         tf2::Quaternion q;
      |         ^~~
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:93:9: error: ‘q’ was not declared in this scope
   93 |         q.setRPY(0, 0, yaw);
      |         ^
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp: In member function ‘void TemplateDroneControl::global_to_local(float, float)’:
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:139:42: error: expected primary-expression before ‘.’ token
  139 |         float local_target_x = GlobalPose.x;
      |                                          ^
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:139:15: warning: unused variable ‘local_target_x’ [-Wunused-variable]
  139 |         float local_target_x = GlobalPose.x;
      |               ^~~~~~~~~~~~~~
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:138:32: warning: unused parameter ‘x’ [-Wunused-parameter]
  138 |     void global_to_local(float x, float y) {
      |                          ~~~~~~^
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:138:41: warning: unused parameter ‘y’ [-Wunused-parameter]
  138 |     void global_to_local(float x, float y) {
      |                                   ~~~~~~^
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp: In member function ‘void TemplateDroneControl::rotate_drone(float, float, float, float, float)’:
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:148:9: error: ‘tf2’ has not been declared
  148 |         tf2::Quaternion q;
      |         ^~~
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:149:9: error: ‘q’ was not declared in this scope
  149 |         q.setRPY(0, 0, target_yaw);
      |         ^
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:155:9: error: ‘tf2’ has not been declared
  155 |         tf2::Quaternion q(
      |         ^~~
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:163:9: error: ‘tf2’ has not been declared
  163 |         tf2::Matrix3x3 m(q);
      |         ^~~
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:164:9: error: ‘m’ was not declared in this scope; did you mean ‘tm’?
  164 |         m.getRPY(roll, pitch, yaw);
      |         ^
      |         tm
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:166:9: error: ‘yaw_err’ was not declared in this scope
  166 |         yaw_err = abs(current_yaw - target_yaw);
      |         ^~~~~~~
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:169:13: error: ‘tf2’ has not been declared
  169 |             tf2::Quaternion q(
      |             ^~~
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:177:13: error: ‘tf2’ has not been declared
  177 |             tf2::Matrix3x3 m(q);
      |             ^~~
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp: In member function ‘void TemplateDroneControl::local_pos_cb(geometry_msgs::msg::PoseStamped_<std::allocator<void> >::SharedPtr)’:
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:192:19: error: expected unqualified-id before ‘.’ token
  192 |         GlobalPose.x = StartPose.x - current_local_pos_.pose.position.x;
      |                   ^
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:193:19: error: expected unqualified-id before ‘.’ token
  193 |         GlobalPose.y = StartPose.y - current_local_pos_.pose.position.y;
      |                   ^
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:194:19: error: expected unqualified-id before ‘.’ token
  194 |         GlobalPose.z = StartPose.z + current_local_pos_.pose.position.z;
      |                   ^
In file included from /opt/ros/foxy/include/rclcpp/client.hpp:40,
                 from /opt/ros/foxy/include/rclcpp/callback_group.hpp:23,
                 from /opt/ros/foxy/include/rclcpp/any_executable.hpp:20,
                 from /opt/ros/foxy/include/rclcpp/memory_strategy.hpp:24,
                 from /opt/ros/foxy/include/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/foxy/include/rclcpp/executor_options.hpp:20,
                 from /opt/ros/foxy/include/rclcpp/executor.hpp:33,
                 from /opt/ros/foxy/include/rclcpp/executors/multi_threaded_executor.hpp:26,
                 from /opt/ros/foxy/include/rclcpp/executors.hpp:21,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:1:
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:203:89: error: expected primary-expression before ‘.’ token
  203 |         RCLCPP_INFO(this->get_logger(), "Current Local Position: %f, %f, %f", GlobalPose.x, GlobalPose.position.y, GlobalPose.position.z);
      |                                                                                         ^
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:203:103: error: expected primary-expression before ‘.’ token
  203 |         RCLCPP_INFO(this->get_logger(), "Current Local Position: %f, %f, %f", GlobalPose.x, GlobalPose.position.y, GlobalPose.position.z);
      |                                                                                                       ^
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:203:126: error: expected primary-expression before ‘.’ token
  203 |         RCLCPP_INFO(this->get_logger(), "Current Local Position: %f, %f, %f", GlobalPose.x, GlobalPose.position.y, GlobalPose.position.z);
      |                                                                                                                              ^
make[2]: *** [CMakeFiles/template_drone_control_node.dir/build.make:63: CMakeFiles/template_drone_control_node.dir/src/template_drone_control_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:105: CMakeFiles/template_drone_control_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
